--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -57,7 +57,15 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run Smoke test suite
-        run: dotnet test --no-build --verbosity normal --filter "TestCategory=SmokeSuite" --logger "trx;LogFileName=test-results.trx"
+        run: dotnet test --no-build --verbosity normal --filter "TestCategory=SmokeSuite" --logger "trx;LogFileName=test-results.trx" --settings NUnit.runsettings
+        continue-on-error: true
+
+      - name: List allure-results (Debug)
+        if: always()
+        run: |
+          echo "Checking allure-results directory..."
+          ls -la bin/Debug/net8.0/allure-results || echo "allure-results not found"
+          find . -name "allure-results" -type d || echo "No allure-results found anywhere"
 
       - name: Publish Test Results
         if: always()
@@ -75,6 +83,7 @@ jobs:
           allure_results: ReqresApiAutomation/bin/Debug/net8.0/allure-results
           allure_report: allure-report-smoke
           allure_history: allure-history
+          keep_reports: 20
 
       - name: Upload Allure report (Smoke)
         if: always()
@@ -117,7 +126,14 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run Regression test suite
-        run: dotnet test --no-build --verbosity normal --filter "TestCategory=RegressionSuite" --logger "trx;LogFileName=test-results.trx"
+        run: dotnet test --no-build --verbosity normal --filter "TestCategory=RegressionSuite" --logger "trx;LogFileName=test-results.trx" --settings NUnit.runsettings
+        continue-on-error: true
+
+      - name: List allure-results (Debug)
+        if: always()
+        run: |
+          echo "Checking allure-results directory..."
+          ls -la bin/Debug/net8.0/allure-results || echo "allure-results not found"
 
       - name: Publish Test Results
         if: always()
@@ -135,6 +151,7 @@ jobs:
           allure_results: ReqresApiAutomation/bin/Debug/net8.0/allure-results
           allure_report: allure-report-regression
           allure_history: allure-history
+          keep_reports: 20
 
       - name: Upload Allure report (Regression)
         if: always()
@@ -177,7 +194,14 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run selected suite
-        run: dotnet test --no-build --verbosity normal --filter "TestCategory=${{ github.event.inputs.suite }}" --logger "trx;LogFileName=test-results.trx"
+        run: dotnet test --no-build --verbosity normal --filter "TestCategory=${{ github.event.inputs.suite }}" --logger "trx;LogFileName=test-results.trx" --settings NUnit.runsettings
+        continue-on-error: true
+
+      - name: List allure-results (Debug)
+        if: always()
+        run: |
+          echo "Checking allure-results directory..."
+          ls -la bin/Debug/net8.0/allure-results || echo "allure-results not found"
 
       - name: Publish Test Results
         if: always()
@@ -195,6 +219,7 @@ jobs:
           allure_results: ReqresApiAutomation/bin/Debug/net8.0/allure-results
           allure_report: allure-report-manual
           allure_history: allure-history
+          keep_reports: 20
 
       - name: Upload Allure report (Manual)
         if: always()
