--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -81,7 +81,7 @@ jobs:
         if: always()
         uses: simple-elf/allure-report-action@master
         with:
-          allure_results: bin/Debug/net8.0/allure-results
+          allure_results: ReqresApiAutomation/bin/Debug/net8.0/allure-results
           allure_report: allure-report-smoke
           allure_history: allure-history
           keep_reports: 20
@@ -151,7 +151,7 @@ jobs:
         if: always()
         uses: simple-elf/allure-report-action@master
         with:
-          allure_results: bin/Debug/net8.0/allure-results
+          allure_results: ReqresApiAutomation/bin/Debug/net8.0/allure-results
           allure_report: allure-report-regression
           allure_history: allure-history
           keep_reports: 20
@@ -221,7 +221,7 @@ jobs:
         if: always()
         uses: simple-elf/allure-report-action@master
         with:
-          allure_results: bin/Debug/net8.0/allure-results
+          allure_results: ReqresApiAutomation/bin/Debug/net8.0/allure-results
           allure_report: allure-report-manual
           allure_history: allure-history
           keep_reports: 20
